# SharedWallet

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
scripts/: env.sh
src/: alembic.ini  main.py
src/api/v1/dependencies/: auth.py  expense.py  group.py  user.py
src/api/v1/routes/: __init__.py  exceptions.py  expense.py  group.py  user.py
src/api/v1/schemas/: expense_schemas.py  group_schemas.py  user_schemas.py
src/config/: settings.py
src/domain/: exceptions.py
src/domain/models/: expense.py  group.py  user.py
src/domain/services/: expense_service.py  group_service.py  user_service.py
src/infrastructure/persistance/: base.py
src/infrastructure/persistance/migrations/: env.py
src/infrastructure/persistance/migrations/versions/: 2a80ea9ebef6_user.py  5fa581cf0fd7_expenses_gropus.py
src/infrastructure/persistance/models/: __init__.py  category.py  expense.py  group.py  user.py
src/infrastructure/persistance/repositories/: expense_repository.py  group_repository.py  repository.py  user_repository.py
src/tests/: conftest.py  test_health.py
