[tool.poetry]
name = "SharedWallet"
version = "0.1.0"
description = "Sharing your expenses with your friends"
authors = ["Matias Brigante <matias.brigante@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
pydantic = "^2.4.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
httpx = "^0.25.0"
pytest = "^7.4.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.13"
black = "^23.7.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
