[tool.poetry]
name = "SharedWallet"
version = "0.1.0"
description = "Sharing your expenses with your friends"
authors = ["Matias Brigante <matias.brigante@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.11.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
pydantic = "^2.1.1"
psycopg2-binary = "2.9.7"
httpx = "^0.25.0"
pytest = "^7.4.2"
sqlalchemy = "1.4.32"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.13"
black = "^23.7.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["I", "E501", "F811", "E711"]
select = ["E", "F", "W"]
line-length = 79
fixable = ["I"]
exclude = [".env", ".venv", "venv", "src/infrastructure/persistance/migrations"]
show-source = true

[tool.black]
line-length = 79
force-exclude = '''
/(
  | .env
  | .venv
  | .mako
  | venv
  | notebooks
  | src/infrastructure/persistance/migrations*
  | postgresql/data/*
)/
'''